# pysankey

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/txt/: budget.txt  color_budget.txt
pysankey/: cli.py  draw.py  extract.py  io.py  parse.py  pysankey.py
